--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,13 +1,19 @@
+# Default
 .idea
 .vscode
+
+# Node
 node_modules
-__pycache__
-venv
-.env*
+
+# Dist & tests
 dist
 build
+
+# Logs:
 *.log
 npm-debug.log*
+
+# Special
 Thumbs.db
 Desktop.ini
 .DS_Store*
